--- a/index.html
+++ b/index.html
@@ -1,301 +1,141 @@
 <!doctype html>
-<html lang="pl">
+<html lang="es">
 <head>
 <meta charset="utf-8">
-<title>Video Grid</title>
+<title>XPANOL Videos</title>
 
 <style>
-html, body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  background: #000;
-  overflow: hidden;
-  font-family: sans-serif;
+body{
+  margin:0;
+  background:#000;
+  font-family:Arial, sans-serif;
 }
 
-.videos-container {
-  width: 94vw;
-  height: 94vh;
-  margin: auto;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  gap: 14px;
-  padding: 3vh 0;
-  box-sizing: border-box;
-  position: relative;
+.video-grid{
+  display:grid;
+  grid-template-columns:repeat(3, 1fr);
+  gap:20px;
+  padding:20px;
 }
 
-.video-wrapper {
-  position: relative;
-  border-radius: 12px;
-  overflow: hidden;
-  background: #000;
+.video-box{
+  position:relative;
+  background:#000;
 }
 
-.video-wrapper video {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  display: block;
-  background: #000;
+video{
+  width:100%;
+  height:auto;
+  display:block;
+  background:#000;
 }
 
-.video-wrapper.inactive video {
-  filter: brightness(0.35);
+/* przycisk PLAY */
+.play-btn{
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%, -50%);
+  width:64px;
+  height:64px;
+  border-radius:50%;
+  background:rgba(0,0,0,0.7);
+  color:#fff;
+  font-size:32px;
+  border:none;
+  cursor:pointer;
+  z-index:10;
 }
 
-.video-wrapper.active {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 66%;
-  height: 90%;
-  transform: translate(-50%, -50%);
-  z-index: 100;
+/* domyślnie brak kontrolek */
+video{
+  pointer-events:none;
 }
 
-/* PLAY / PAUSE */
-.play-overlay {
-  position: absolute;
-  inset: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  z-index: 20;
+/* aktywne video */
+.video-box.active video{
+  pointer-events:auto;
 }
 
-.play-circle {
-  width: 70px;
-  height: 70px;
-  background: rgba(255,255,255,0.75);
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-/* PLAY ICON */
-.play-overlay.play .icon {
-  width: 0;
-  height: 0;
-  border-left: 22px solid #F8AC10;
-  border-top: 14px solid transparent;
-  border-bottom: 14px solid transparent;
-}
-
-/* PAUSE ICON */
-.play-overlay.pause .icon {
-  width: 18px;
-  height: 22px;
-  border-left: 6px solid #F8AC10;
-  border-right: 6px solid #F8AC10;
-}
-
-/* hover tylko dla aktywnego */
-.video-wrapper.active .play-overlay {
-  opacity: 0;
-  pointer-events: none;
-}
-
-.video-wrapper.active:hover .play-overlay {
-  opacity: 1;
-  pointer-events: auto;
-}
-
-/* SEEK */
-.seek-btn {
-  position: absolute;
-  top: 50%;
-  width: 46px;
-  height: 46px;
-  background: rgba(255,255,255,0.75);
-  border-radius: 50%;
-  display: none;
-  justify-content: center;
-  align-items: center;
-  font-size: 22px;
-  color: #F8AC10;
-  cursor: pointer;
-  z-index: 30;
-}
-
-.seek-btn.left { left: 14px; }
-.seek-btn.right { right: 14px; }
-
-.video-wrapper.active:hover .seek-btn {
-  display: flex;
-}
-
-/* CLOSE */
-.close-btn {
-  position: absolute;
-  top: 12px;
-  right: 12px;
-  width: 36px;
-  height: 36px;
-  background: rgba(255,255,255,0.8);
-  border-radius: 50%;
-  display: none;
-  justify-content: center;
-  align-items: center;
-  font-size: 22px;
-  cursor: pointer;
-  z-index: 40;
-}
-
-.video-wrapper.active .close-btn {
-  display: flex;
-}
-
-/* PROGRESS */
-.progress-bar {
-  position: absolute;
-  bottom: 12px;
-  left: 12px;
-  right: 12px;
-  height: 6px;
-  background: rgba(255,255,255,0.3);
-  border-radius: 3px;
-  z-index: 30;
-}
-
-.progress-bar span {
-  display: block;
-  height: 100%;
-  width: 0%;
-  background: #F8AC10;
-  border-radius: 3px;
+/* ukryj play po starcie */
+.video-box.active .play-btn{
+  display:none;
 }
 </style>
 </head>
 
 <body>
 
-<div class="videos-container">
+<div class="video-grid">
 
-  <div class="video-wrapper">
-    <video muted playsinline preload="metadata" src="videos/video1.mp4"></video>
-    <div class="play-overlay play">
-      <div class="play-circle"><div class="icon"></div></div>
-    </div>
-    <div class="seek-btn left">◀</div>
-    <div class="seek-btn right">▶</div>
-    <div class="close-btn">✕</div>
+  <div class="video-box">
+    <video preload="metadata" playsinline muted>
+      <source src="videos_mp4/video1.mp4" type="video/mp4">
+    </video>
+    <button class="play-btn">▶</button>
   </div>
 
-  <div class="video-wrapper">
-    <video muted playsinline preload="metadata" src="videos/video2.mp4"></video>
-    <div class="play-overlay play">
-      <div class="play-circle"><div class="icon"></div></div>
-    </div>
-    <div class="seek-btn left">◀</div>
-    <div class="seek-btn right">▶</div>
-    <div class="close-btn">✕</div>
+  <div class="video-box">
+    <video preload="metadata" playsinline muted>
+      <source src="videos_mp4/video2.mp4" type="video/mp4">
+    </video>
+    <button class="play-btn">▶</button>
   </div>
 
-  <div class="video-wrapper">
-    <video muted playsinline preload="metadata" src="videos/video3.mp4"></video>
-    <div class="play-overlay play">
-      <div class="play-circle"><div class="icon"></div></div>
-    </div>
-    <div class="seek-btn left">◀</div>
-    <div class="seek-btn right">▶</div>
-    <div class="close-btn">✕</div>
+  <div class="video-box">
+    <video preload="metadata" playsinline muted>
+      <source src="videos_mp4/video3.mp4" type="video/mp4">
+    </video>
+    <button class="play-btn">▶</button>
   </div>
 
-  <div class="video-wrapper">
-    <video muted playsinline preload="metadata" src="videos/video4.mp4"></video>
-    <div class="play-overlay play">
-      <div class="play-circle"><div class="icon"></div></div>
-    </div>
-    <div class="seek-btn left">◀</div>
-    <div class="seek-btn right">▶</div>
-    <div class="close-btn">✕</div>
+  <div class="video-box">
+    <video preload="metadata" playsinline muted>
+      <source src="videos_mp4/video4.mp4" type="video/mp4">
+    </video>
+    <button class="play-btn">▶</button>
   </div>
 
-  <div class="video-wrapper">
-    <video muted playsinline preload="metadata" src="videos/video5.mp4"></video>
-    <div class="play-overlay play">
-      <div class="play-circle"><div class="icon"></div></div>
-    </div>
-    <div class="seek-btn left">◀</div>
-    <div class="seek-btn right">▶</div>
-    <div class="close-btn">✕</div>
+  <div class="video-box">
+    <video preload="metadata" playsinline muted>
+      <source src="videos_mp4/video5.mp4" type="video/mp4">
+    </video>
+    <button class="play-btn">▶</button>
   </div>
 
-  <div class="video-wrapper">
-    <video muted playsinline preload="metadata" src="videos/video6.mp4"></video>
-    <div class="play-overlay play">
-      <div class="play-circle"><div class="icon"></div></div>
-    </div>
-    <div class="seek-btn left">◀</div>
-    <div class="seek-btn right">▶</div>
-    <div class="close-btn">✕</div>
+  <div class="video-box">
+    <video preload="metadata" playsinline muted>
+      <source src="videos_mp4/video6.mp4" type="video/mp4">
+    </video>
+    <button class="play-btn">▶</button>
   </div>
 
 </div>
 
 <script>
-const wrappers = document.querySelectorAll('.video-wrapper');
-let active = null;
+const boxes = document.querySelectorAll('.video-box');
 
-function resetView() {
-  wrappers.forEach(w => {
-    w.classList.remove('active','inactive');
-    w.querySelector('video').pause();
-    w.querySelector('.play-overlay').className = 'play-overlay play';
-    w.querySelectorAll('.progress-bar').forEach(p => p.remove());
+boxes.forEach(box=>{
+  const video = box.querySelector('video');
+  const playBtn = box.querySelector('.play-btn');
+
+  playBtn.addEventListener('click', ()=>{
+    boxes.forEach(b=>{
+      const v = b.querySelector('video');
+      v.pause();
+      v.removeAttribute('controls');
+      b.classList.remove('active');
+    });
+
+    box.classList.add('active');
+    video.setAttribute('controls','controls');
+    video.play();
   });
-  active = null;
-}
 
-wrappers.forEach(w => {
-  const v = w.querySelector('video');
-  const play = w.querySelector('.play-overlay');
-  const left = w.querySelector('.seek-btn.left');
-  const right = w.querySelector('.seek-btn.right');
-  const close = w.querySelector('.close-btn');
-
-  play.onclick = e => {
-    e.stopPropagation();
-
-    if (!active) {
-      wrappers.forEach(x => { if (x !== w) x.classList.add('inactive'); });
-      w.classList.add('active');
-      active = w;
-      v.play();
-      play.className = 'play-overlay pause';
-
-      const p = document.createElement('div');
-      p.className = 'progress-bar';
-      p.innerHTML = '<span></span>';
-      w.appendChild(p);
-
-      v.ontimeupdate = () => {
-        p.firstChild.style.width = (v.currentTime / v.duration * 100) + '%';
-      };
-    } else {
-      if (v.paused) {
-        v.play();
-        play.className = 'play-overlay pause';
-      } else {
-        v.pause();
-        play.className = 'play-overlay play';
-      }
-    }
-  };
-
-  left.onclick = e => { e.stopPropagation(); v.currentTime = Math.max(0, v.currentTime - 5); };
-  right.onclick = e => { e.stopPropagation(); v.currentTime = Math.min(v.duration, v.currentTime + 5); };
-  close.onclick = e => { e.stopPropagation(); resetView(); };
-});
-
-document.addEventListener('keydown', e => {
-  if (e.key === 'Escape') resetView();
+  video.addEventListener('ended', ()=>{
+    video.removeAttribute('controls');
+    box.classList.remove('active');
+  });
 });
 </script>
 
