--- a/index.html
+++ b/index.html
@@ -14,34 +14,32 @@ html, body {
   overflow: hidden;
 }
 
-/* GRID 2x3 */
+/* GRID 2x3, proporcje 9:16 wideo */
 .video-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
+  gap: 5px;
   width: 100vw;
   height: 100vh;
-  gap: 5px;
   box-sizing: border-box;
 }
 
-/* BOX VIDEO */
 .video-box {
   position: relative;
   width: 100%;
   height: 100%;
-  max-height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.video-box video {
+video {
   width: auto;
   height: 100%;
-  max-height: 100%;
   object-fit: contain;
   background: #000;
+  display: block;
 }
 
 /* PLAY BUTTON */
@@ -109,15 +107,6 @@ const boxes = document.querySelectorAll('.video-box');
 boxes.forEach(box => {
   const video = box.querySelector('video');
   const overlay = box.querySelector('.play-overlay');
-
-  // Miniaturka w Safari: kadr z 2 sekundy
-  video.addEventListener('loadedmetadata', () => {
-    if(video.duration > 2) {
-      video.currentTime = 2;
-      video.pause();
-      video.currentTime = 0;
-    }
-  });
 
   overlay.addEventListener('click', e => {
     e.stopPropagation();
