--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ html, body {
   width: 100vw;  /* Szerokość ekranu */
   height: 100vh;  /* Wysokość ekranu */
   box-sizing: border-box;
+  align-items: center;
 }
 
 .video-box {
