--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="pl">
 <head>
 <meta charset="UTF-8">
 <title>XPANOL Video Grid</title>
@@ -14,7 +14,6 @@ html, body {
   overflow: hidden;
 }
 
-/* GRID 2x3 - 6 wideo */
 .video-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);  /* 3 kolumny */
@@ -33,7 +32,7 @@ html, body {
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden;  /* Ukrywa wszystko poza elementem */
+  overflow: hidden;
 }
 
 video {
@@ -78,27 +77,27 @@ video {
 
 <div class="video-grid">
   <div class="video-box">
-    <video preload="metadata" playsinline src="videos/video1.mp4"></video>
+    <video preload="auto" playsinline src="videos/video1.mp4"></video>
     <div class="play-overlay play"></div>
   </div>
   <div class="video-box">
-    <video preload="metadata" playsinline src="videos/video2.mp4"></video>
+    <video preload="auto" playsinline src="videos/video2.mp4"></video>
     <div class="play-overlay play"></div>
   </div>
   <div class="video-box">
-    <video preload="metadata" playsinline src="videos/video3.mp4"></video>
+    <video preload="auto" playsinline src="videos/video3.mp4"></video>
     <div class="play-overlay play"></div>
   </div>
   <div class="video-box">
-    <video preload="metadata" playsinline src="videos/video4.mp4"></video>
+    <video preload="auto" playsinline src="videos/video4.mp4"></video>
     <div class="play-overlay play"></div>
   </div>
   <div class="video-box">
-    <video preload="metadata" playsinline src="videos/video5.mp4"></video>
+    <video preload="auto" playsinline src="videos/video5.mp4"></video>
     <div class="play-overlay play"></div>
   </div>
   <div class="video-box">
-    <video preload="metadata" playsinline src="videos/video6.mp4"></video>
+    <video preload="auto" playsinline src="videos/video6.mp4"></video>
     <div class="play-overlay play"></div>
   </div>
 </div>
