--- a/index.html
+++ b/index.html
@@ -1,77 +1,80 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-<meta charset="UTF-8">
-<title>XPANOL Video Grid</title>
-<style>
-html, body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  background: #000;
-  font-family: Arial, sans-serif;
-  overflow: hidden;
-}
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>XPANOL Video Grid</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      background: #000;
+      font-family: Arial, sans-serif;
+      overflow: hidden;
+    }
 
-.video-grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);  /* 3 kolumny */
-  grid-template-rows: repeat(2, 1fr);  /* 2 rzędy */
-  gap: 5px;
-  width: 100vw;  /* Szerokość ekranu */
-  height: 100vh;  /* Wysokość ekranu */
-  box-sizing: border-box;
-  align-items: center;
-}
+    /* Grid: 2 rows and 3 columns for videos */
+    .video-grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);  /* 3 columns */
+      grid-template-rows: repeat(2, 1fr);  /* 2 rows */
+      gap: 5px;
+      width: 100vw;  /* Full screen width */
+      height: 100vh;  /* Full screen height */
+      box-sizing: border-box;
+      align-items: center;
+      justify-items: center;
+    }
 
-.video-box {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-}
+    .video-box {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+    }
 
-video {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;  /* Zachowuje proporcje 9:16 */
-  background: #000;
-  display: block;
-}
+    video {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;  /* Ensures the video keeps the aspect ratio */
+      background: #000;
+      display: block;
+    }
 
-/* PLAY BUTTON */
-.play-overlay {
-  position: absolute;
-  width: 64px;
-  height: 64px;
-  background: rgba(255,255,255,0.7);
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  z-index: 10;
-}
+    /* Play button style */
+    .play-overlay {
+      position: absolute;
+      width: 64px;
+      height: 64px;
+      background: rgba(255,255,255,0.7);
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      z-index: 10;
+    }
 
-.play-overlay.play::after {
-  content: "";
-  border-left: 22px solid #F8AC10;
-  border-top: 14px solid transparent;
-  border-bottom: 14px solid transparent;
-}
+    .play-overlay.play::after {
+      content: "";
+      border-left: 22px solid #F8AC10;
+      border-top: 14px solid transparent;
+      border-bottom: 14px solid transparent;
+    }
 
-.play-overlay.pause::after {
-  content: "";
-  width: 18px;
-  height: 22px;
-  border-left: 6px solid #F8AC10;
-  border-right: 6px solid #F8AC10;
-}
-</style>
+    .play-overlay.pause::after {
+      content: "";
+      width: 18px;
+      height: 22px;
+      border-left: 6px solid #F8AC10;
+      border-right: 6px solid #F8AC10;
+    }
+  </style>
 </head>
 <body>
 
@@ -109,14 +112,15 @@ boxes.forEach(box => {
   const video = box.querySelector('video');
   const overlay = box.querySelector('.play-overlay');
 
+  // Click play button to toggle between play and pause
   overlay.addEventListener('click', e => {
     e.stopPropagation();
-    if(video.paused){
+    if (video.paused) {
       video.play();
-      overlay.classList.replace('play','pause');
+      overlay.classList.replace('play', 'pause');
     } else {
       video.pause();
-      overlay.classList.replace('pause','play');
+      overlay.classList.replace('pause', 'play');
     }
   });
 });
