--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
       overflow: hidden;
     }
 
-    /* Grid: 2 rows and 3 columns for videos */
+    /* Grid layout: 2 rows and 3 columns */
     .video-grid {
       display: grid;
-      grid-template-columns: repeat(3, 1fr);  /* 3 columns */
-      grid-template-rows: repeat(2, 1fr);  /* 2 rows */
+      grid-template-columns: repeat(3, 1fr);  /* 3 kolumny */
+      grid-template-rows: repeat(2, 1fr);  /* 2 rzędy */
       gap: 5px;
-      width: 100vw;  /* Full screen width */
-      height: 100vh;  /* Full screen height */
+      width: 100vw;
+      height: 100vh;
       box-sizing: border-box;
       align-items: center;
       justify-items: center;
@@ -41,12 +41,12 @@
     video {
       width: 100%;
       height: 100%;
-      object-fit: contain;  /* Ensures the video keeps the aspect ratio */
+      object-fit: contain;  /* Ensures the video maintains its aspect ratio */
       background: #000;
       display: block;
     }
 
-    /* Play button style */
+    /* Play button */
     .play-overlay {
       position: absolute;
       width: 64px;
@@ -112,7 +112,7 @@ boxes.forEach(box => {
   const video = box.querySelector('video');
   const overlay = box.querySelector('.play-overlay');
 
-  // Click play button to toggle between play and pause
+  // Kliknięcie na przycisk play/pause
   overlay.addEventListener('click', e => {
     e.stopPropagation();
     if (video.paused) {
